backstage/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    app.kubernetes.io/name: backstage
    secrets/gh-oauth-credentials: "true"
    secrets/gh-git-credentials: "true"
    secrets/gh-docker-registry: "true"
